hphp/hack/test/typecheck/construct/private_props_abs_without_construct1.php
<?hh

class C {}

abstract class A {
  private C $c;
}
